메인페이지 탭 삭제 및 Product 페이지 기능 추가
Product 페이지
1. 애니메이션 효과
2. 하단 후기, Q&A, 제품 상세설명 탭 추가

--- a/shop/src/App.css
+++ b/shop/src/App.css
@@ -13,6 +13,23 @@
   }
 }
 
+.startTab {
+  transform: scale(0);
+}
+.endTab {
+  transform: scale(1);
+  transition: transform 0.5s;
+}
+
+.startPage {
+  opacity: 0;
+}
+
+.endPage {
+  opacity: 1;
+  transition : opacity 0.5s;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
